<resources>

    <!--  Nombre de la aplicación -->
    <string name="app_name">AMAAC</string>

    <!--  Categorias de pictogramas -->
    <string name="categoria_verbos">Verbos</string>
    <string name="categoria_alimentos">Alimentos</string>
    <string name="categoria_familia">Familia</string>
    <string name="categoria_profesiones">Profesiones</string>
    <string name="categoria_lugares">Lugares</string>
    <string name="categoria_animales">Animales</string>

    <!--  Nombre de la base de datos -->
    <string name="nombre_db">amaac.sqlite</string>

    <!--  Letra molde de ejercicio preestablecido vocales -->
    <string name="letra_molde">Aa</string>

    <!--  Etiquetas de la plantilla item cardView categoria y frase -->
    <string name="txt_titulo">Titulo</string>

    <!--  Letra molde de categoria vocales -->
    <string name="txt_vocales">Vocales</string>

    <!--  Actividad términos y condiciones -->
    <string name="titulo_terminos_y_condiciones">TÉRMINOS Y CONDICIONES:</string>
    <string name="contenido_terminos_y_condiciones">
        <![CDATA[
        <html>
            <body style="text-align:justify">
                <p>
                Al descargar o utilizar la aplicación, aceptará automáticamente estos términos. Asegúrese de leerlos atentamente antes de utilizar la aplicación. Le ofrecemos esta aplicación para su uso personal sin ningún coste, pero debe saber que no está autorizado a enviársela a otra persona ni a copiar o modificar la aplicación, así como ninguna parte de esta, ni nuestras marcas comerciales de ningún modo. No deberá intentar extraer el código fuente de la aplicación, traducir la aplicación a otros idiomas ni crear versiones derivadas. La aplicación y todas las marcas comerciales, los derechos de autor, los derechos sobre bases de datos y demás derechos de propiedad intelectual relacionados continuarán siendo propiedad de easyJet.</p>
                </p>

                <p>
                easyJet pretende garantizar que la aplicación sea siempre lo más útil y eficiente posible. Por este motivo, nos reservamos el derecho de efectuar cambios en la aplicación o de aplicar cargos por los servicios ofrecidos, en cualquier momento y por cualquier motivo. En ningún caso se aplicarán cargos por la aplicación o sus servicios sin notificar con claridad el motivo por el que debe realizar el abono.\n\n
                </p>

                <p>
                La aplicación de easyJet almacena y procesa los datos personales que nos has facilitado para que puedas reservar tus vuelos. Es tu responsabilidad mantener seguro tanto tu teléfono móvil como el acceso a tu aplicación. Por lo tanto, te recomendamos no liberar tu teléfono móvil para eliminar las restricciones y limitaciones impuestas por el sistema operativo oficial de tu dispositivo. Este proceso podría hacer que tu teléfono sea vulnerable a programas maliciosos, se comprometan las características de seguridad de tu teléfono móvil, así como no poder abrir la aplicación de easyJet o que esta no funcione adecuadamente.</p>
                Cabe destacar que existen algunos casos en los que easyJet no se hará responsable. Algunas funciones de la aplicación, como la posibilidad de descargar y almacenar las tarjetas de embarque móviles para que estén disponibles sin conexión, el Flight Tracker en tiempo real y la función Mobile Host, requerirán que la aplicación disponga de una conexión a Internet activa. La conexión puede ser mediante Wi-Fi o a través del proveedor de servicios de red móvil, pero easyJet no se hará responsable del mal funcionamiento de la aplicación en caso de que no disponga de conexión Wi-Fi o haya superado su límite de uso de datos.
                </p>
                Recuerde que, si utiliza la aplicación fuera de una zona con conexión Wi-Fi, se aplicarán los términos del contrato con su proveedor de servicios de red móvil. Por consiguiente, el proveedor de servicios móviles podrá aplicar cargos por los datos consumidos durante la conexión al acceder a la aplicación, así como otros cargos de terceros. Si utiliza la aplicación, acepta la responsabilidad en relación con dichos cargos, incluidos los cargos por los datos de roaming si utiliza la aplicación fuera del territorio de origen (su región o país) sin desactivar el roaming de datos. En caso de que no sea usted la persona encargada de pagar los recibos del dispositivo en el que utiliza la aplicación, nosotros asumiremos que ha recibido su permiso para utilizar la aplicación.
                </p>

                <p>
                De la misma forma, easyJet no siempre puede hacerse responsable de la forma en que usted utiliza la aplicación. Si desea utilizar la función de tarjeta de embarque móvil de la aplicación, es posible que el personal de easyJet deba manipular su dispositivo brevemente al escanear la tarjeta de embarque. A pesar de que, evidentemente, el personal tomará todas las precauciones necesarias para asegurarse de que no le ocurra nada a su dispositivo, no nos hacemos responsables de los posibles daños que pueda sufrir, a menos que sean producto de cualquier tipo de negligencia o mala conducta intencionada por parte del trabajador. Además, deberá asegurarse de que el dispositivo está cargado. En caso de que se agote la batería y no sea posible escanear la tarjeta de embarque, easyJet no se hará responsable si no puede volar a consecuencia de esta situación.
                </p>

                <p>
                También debe recordar que el objetivo de la función de escaneado del pasaporte de la aplicación es facilitarle las cosas, pero no sustituye la documentación necesaria para viajar; deberá traer dicha documentación al aeropuerto para volar. Por último, con respecto a la responsabilidad de easyJet en relación con su uso de la aplicación cuando utiliza la función Mobile Host de la misma, es importante tener en cuenta que, a pesar de que nos esforzamos a fin de garantizar que se encuentra actualizada y que funciona correctamente en todo momento, dependemos de los servicios de terceros utilizados para obtener información con el objeto de facilitársela a usted. Por consiguiente, no está pensada para reemplazar totalmente la necesidad de mantenerse informado de las novedades que se muestran en las pantallas de la terminal o se anuncian por la megafonía del aeropuerto. easyJet no aceptará ninguna responsabilidad por las pérdidas, ya sean directas o indirectas, que sufra al confiar únicamente en esta función de la aplicación en lugar de utilizar todos los recursos del aeropuerto para mantenerse informado sobre los detalles de su vuelo.
                </p>

                <p>
                Es posible que en algún momento debamos actualizar la aplicación. En estos momentos, la aplicación está disponible para iOS y Android. Existe la posibilidad de que se modifiquen los requisitos necesarios para ambos sistemas (y para cualquier otro sistema adicional para el que se ofrezca la aplicación en el futuro), por lo que deberá descargar las actualizaciones si desea continuar utilizando la aplicación. EasyJet no garantiza que vaya a ofrecer siempre las actualizaciones que usted necesite o que sean compatibles con la versión de iOS/Android instalada en su dispositivo. No obstante, usted garantiza que aceptará todas las actualizaciones de la aplicación cuando se le ofrezcan. También es posible que deje de ofrecerse la aplicación y se interrumpa su uso en cualquier momento sin previo aviso. A menos que se indique lo contrario, tras la terminación: (a) cesarán los derechos y las licencias concedidos mediante los presentes términos; (b) deberá suspender el uso de la aplicación y, si fuera necesario, eliminarla de su dispositivo.
                </p>
            </body>
        </Html>
    ]]>
    </string>
    <string name="aceptar">ACEPTAR</string>
    <string name="rechazar">RECHAZAR</string>


    <string name="title_activity_splash_screenn">SplashScreenn</string>

    <!--  UI Menu drawable -->
    <string name="consejos_relajacion">Técnicas de relajación</string>
    <string name="guia_padre">¿Cómo usar la aplicación?</string>
    <string name="ejercicios_especificos">Config. ejercicios especificos</string>
    <string name="title_tecnica_detail">Detalle de la técnica</string>
    <string name="title_guiapadre_detail">guia_padre Detail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="categoria_verbos_aux">Verbos AUX</string>
    <string name="categoria_respuestas">Respuestas</string>
    <string name="categoria_bebidas">Bebidas</string>
    <string name="categoria_frutas">Frutas</string>
    <string name="categoria_verduras">Verduras</string>
    <string name="categoria_comida">Comida</string>
    <string name="categoria_postres">Postres</string>
    <string name="categoria_objetos">Objetos</string>
    <string name="categoria_animo">Animo</string>


        <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>

</resources>
