<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_guia_padre"
            android:icon="@drawable/ic_menu_black_guia_24dp"
            android:title="@string/guia_padre"
            tools:ignore="HardcodedText" />

        <item
            android:id="@+id/nav_consejos_relajacion"
            android:icon="@drawable/ic_menu_black_tecnicas_relajacion_24dp"
            android:title="@string/consejos_relajacion"
            tools:ignore="HardcodedText" />

        <item
            android:id="@+id/nav_ejercicios_especificos"
            android:icon="@drawable/ic_menu_black_configuracion_24dp"
            android:title="@string/ejercicios_especificos"
            tools:ignore="HardcodedText" />
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->
</menu>
