<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_terminos_ycondiciones"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary_text"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="8"
    tools:context="com.enterprises.devare.amaac_avanzaado.controlador.activitys.TerminosYCondiciones">


    <LinearLayout
        android:id="@+id/llayout_contenido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tyc_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/titulo_terminos_y_condiciones"
            android:textAlignment="center"
            android:textColor="@color/colorIcons"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_tyc_contenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contenido_terminos_y_condiciones"
                android:textColor="@color/colorIcons"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_tyc_rechazar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/rechazar"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btn_tyc_aceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/aceptar"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</LinearLayout>
